[dependencies.bincode]
version = "^1.3.1"

[dependencies.borsh]
version = "0.9.0"

[dependencies.bytemuck]
version = "1.7.3"

[dependencies.byteorder]
version = "^1.3.4"

[dependencies.quick-protobuf]
version = "=0.8.0"

[dependencies.solana-program]

path = "../sdk/program"
version = "1.11.0"

[dependencies.switchboard-protos]
version = "0.1.58"

[dependencies.switchboard-utils]
version = "0.2.1"

[package]
authors = ["Mitchell Gildenberg <mitch@switchboard.xyz>"]
description = "A Rust library to interact with Switchboard data feeds."
documentation = "https://docs.rs/switchboard-program/"
edition = "2018"
homepage = "https://switchboard.xyz"
keywords = ["switchboard", "oracle", "solana"]
license = "MIT"
name = "switchboard-program"
readme = "README.md"
version = "0.3.1"